--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,8 @@
-@import "tailwindcss";
+@import 'flowbite';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* @plugin "flyonui"; */
 
 :root {
   --background: #ffffff;
@@ -19,8 +23,41 @@
   }
 }
 
+html,
+body {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 4rem;
+  letter-spacing: -0.03em;
+  line-height: 0.9;
+}
+
+h2 {
+  font-size: 2rem;
+  letter-spacing: -1px;
+}
+
 body {
   background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.shadow-div {
+  box-shadow: 0px 4px 16px 0px rgba(66, 66, 66, 0.35);
 }
